<resources>
    <string name="app_name">All Products Inventory</string>

    <!-- Label for overflow menu option that inserts fake product data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all product data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Products</string>

    <!-- Title text for the empty view [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">There are no products yet in the database.</string>

    <!-- Subtitle text for the empty view that prompts the user to add a product [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a product</string>

    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_product">Add a Product</string>

    <!-- Title for the activity to edit an existing product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_product">Edit Product</string>

    <!-- Label for editor menu option to save product and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current product [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Toast message for empty field-->
    <string name="empty_field">A field is missing.Please fill up all fields</string>

    <!-- Toast message in editor when new product has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_successful">Product saved</string>

    <!-- Toast message in editor when new product has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_failed">Error with saving product</string>

    <!-- Toast message in editor when current product was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_successful">Product updated</string>

    <!-- Toast message in editor when current product has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_failed">Error with updating product</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current product [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_title">Product</string>

    <!-- Label for price information in the editor [CHAR LIMIT=30] -->
    <string name="category_price">Price</string>

    <!-- Label for quantity information in the editor [CHAR LIMIT=30] -->
    <string name="category_quantity">Quantity</string>

    <!-- Label for supplier information in the editor [CHAR LIMIT=30] -->
    <string name="category_supplier">Supplier</string>

    <!-- Text hint for product name field in the editor [CHAR LIMIT=30] -->
    <string name="product_name">Product name</string>

    <!-- Text hint for product price field in the editor [CHAR LIMIT=30] -->
    <string name="product_price">Product price</string>

    <!-- Label for price unit in the editor [CHAR LIMIT=30] -->
    <string name="unit_product_price">€</string>

    <!-- Text hint for product price field in the editor [CHAR LIMIT=30] -->
    <string name="product_quantity">Quantity</string>

    <!-- Text hint for supplier name field in the editor [CHAR LIMIT=30] -->
    <string name="supplier_name">Name</string>

    <!-- Text hint for supplier phone field in the editor [CHAR LIMIT=30] -->
    <string name="supplier_phone">Phone number</string>

    <!-- Toast message if quantity is <0  -->
    <string name="negative_quantity">Quantity cannot be inferior to zero.</string>

    <!-- Toast message empty name -->
    <string name="empty_name">Please fill up the product name field.</string>

    <!-- Toast message empty price -->
    <string name="empty_price">Please fill up the product price field.</string>

    <!-- Toast message empty quantity  -->
    <string name="empty_quantity">Please fill up the product quantity field.</string>

    <!-- Toast message empty supplier name -->
    <string name="empty_supplier_name">Please fill up the product supplier name field.</string>

    <!-- Toast message empty supplier phone -->
    <string name="empty_supplier_phone">Please fill up the product supplier name field.</string>

    <!-- Toast message sail failure -->
    <string name="sale_failure_text">Quantity in stock could not be reduced.</string>

    <!-- Toast message sail success-->
    <string name="sale_success_text">Quantity in stock reduced.</string>

    <!-- Toast message out of stock-->
    <string name="sale_out">Out of stock.</string>

    <!-- Buttons labels -->
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="call_supplier">Order</string>
    <string name="sale">Sale</string>
    <string name="save">Save</string>


</resources>
