<!-- Layout for the editor -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/TitleStyle"
            android:text="@string/category_overview" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_product_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/product_name"
                android:inputType="textCapWords" />

        </LinearLayout>
    </LinearLayout>

    <!-- Price category -->
    <LinearLayout
        android:id="@+id/container_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_price" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_product_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/product_price"
                android:inputType="number" />

            <!-- Units for price (€) -->
            <TextView
                android:id="@+id/label_price_units"
                style="@style/EditorUnitsStyle"
                android:text="@string/unit_product_price" />
        </RelativeLayout>
    </LinearLayout>

    <!-- Quantity category -->
    <LinearLayout
        android:id="@+id/container_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_quantity" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Quantity field -->
            <EditText
                android:id="@+id/edit_product_quantity"
                style="@style/EditorFieldStyle"
                android:hint="@string/product_quantity"
                android:inputType="number" />
        </RelativeLayout>
    </LinearLayout>
    <!-- Buttons plus and minus  -->
    <LinearLayout
        android:id="@+id/container_quantity_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/productPlus"
            android:layout_width="@dimen/button"
            android:layout_height="@dimen/button"
            android:onClick="plusOneQuantity"
            android:text="@string/plus"
            android:textAllCaps="false"
            android:textSize="@dimen/textSize" />

        <Button
            android:id="@+id/productMin"
            android:layout_width="@dimen/button"
            android:layout_height="@dimen/button"
            android:onClick="minOneQuantity"
            android:text="@string/minus"
            android:textAllCaps="false"
            android:textSize="@dimen/textSize" />

    </LinearLayout>
    <!-- Supplier category -->
    <LinearLayout
        android:id="@+id/container_supplier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_supplier" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Supplier name-->
            <EditText
                android:id="@+id/edit_supplier_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/supplier_name"
                android:inputType="textCapCharacters" />
            <!-- Supplier phone-->
            <EditText
                android:id="@+id/edit_supplier_phone"
                style="@style/EditorFieldStyle"
                android:layout_below="@id/edit_supplier_name"
                android:hint="@string/supplier_phone"
                android:inputType="text" />

            <Button
                android:id="@+id/callSupplier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="callSupplierButton"
                android:text="@string/call_supplier"
                android:textAllCaps="false" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
